# cdownloader

./: .travis.yml  CMakeLists.txt  INSTALL  INSTALL.md  README.md  average.cxx  average.hxx  cdfreader.cxx  cdfreader.hxx  cdownloader-main.cxx  cdownloader.kdev4  chunkdownloader.cxx  chunkdownloader.hxx  commonDefinitions.hxx  config.h.cmake  csatime.cxx  csatime.hxx  dataprovider.cxx  dataprovider.hxx  datareader.cxx  datareader.hxx  datasource.cxx  datasource.hxx  downloader.cxx  downloader.hxx  driver.cxx  driver.hxx  epochrange.hxx  expanding.cxx  expanding.hxx  field.cxx  field.hxx  fieldbuffer.cxx  fieldbuffer.hxx  filter.cxx  filter.hxx  floatcomparison.hxx  format.config.uncrustify  format_sources  metadata.cxx  (+12 more)
.travis/: install-cdf.sh
cdf/: reader.cxx  reader.hxx
cmake/Modules/: CompilerSettings.cmake  FindCDF.cmake  MacroGlibcDetect.cmake
csa/: chunkdownloader.cxx  chunkdownloader.hxx  dataprovider.cxx  dataprovider.hxx  datasource.cxx  datasource.hxx  downloader.cxx  downloader.hxx  metadata.cxx  metadata.hxx  unpacker.cxx  unpacker.hxx
doc/: products
filters/: baddata.cxx  baddata.hxx  blankdata.cxx  blankdata.hxx  density.cxx  density.hxx  nightside.cxx  nightside.hxx  plasmasheet.cxx  plasmasheet.hxx  quality.cxx  quality.hxx  timefilter.cxx  timefilter.hxx
omni/: dataprovider.cxx  dataprovider.hxx  datasource.cxx  datasource.hxx  downloader.cxx  downloader.hxx  hroreader.cxx  hroreader.hxx  metadata.cxx  metadata.hxx  omnidb.cxx  omnidb.hxx
tests/: CMakeLists.txt  averaging_test.cxx  cache-test.cxx  cdf_info_text.cxx  chunk_downloader_test.cxx  cis-mode-test_output.txt  download_meta.cxx  download_sample.cxx  omni_get_data.cxx  omni_list_range.cxx  plasmasheet_output.txt  simple_output.txt
tools/: CMakeLists.txt  async_download_url.cxx
writers/: ASCIIWriter.cxx  ASCIIWriter.hxx  BinaryWriter.cxx  BinaryWriter.hxx
